<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_all_coctels"
            android:icon="@drawable/ic_martini"
            android:title="@string/menu_all_coctels" />
        <item
            android:id="@+id/menu_categories"
            android:icon="@drawable/ic_glass_tulip"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/menu_ingredients"
            android:icon="@drawable/ic_food_variant"
            android:title="@string/menu_ingredients" />
        <item
            android:id="@+id/menu_shopping"
            android:icon="@drawable/ic_clipboard_text"
            android:title="@string/menu_shopping" />

        <item
            android:id="@+id/menu_favorites"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_favorites" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_variant"
            android:title="@string/menu_opc_share" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_thumb_up"
            android:title="@string/menu_opc_rate" />
    </group>

</menu>
